# cloud-allowlist

./: README.md  pyproject.toml
.github/workflows/: ci.yml  update.yml
config/: sources.yaml
src/cloud_allowlist/: __init__.py  cli.py  config.py  diffing.py  io_utils.py  model.py  normalize.py  sorting.py
src/cloud_allowlist/adapters/: __init__.py  atlassian.py  aws.py  common.py  github_meta.py  google.py  m365.py
src/cloud_allowlist/emitters/: __init__.py  csv_out.py  json_out.py  paloalto_out.py  pfsense_out.py  readme_out.py  terraform_out.py  txt_out.py
state/: m365_client_ids.json
state/history/changes/: 2026-04-17.md  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-21.md  2026-04-23.json  2026-04-26.json  2026-04-27.md  2026-04-28.json  2026-04-29.json  2026-04-29.md  2026-04-30.md  2026-05-04.md  2026-05-06.md  2026-05-07.json  2026-05-08.json  2026-05-08.md  2026-05-09.json  2026-05-10.json  2026-05-10.md  2026-05-12.md  2026-05-13.json  2026-05-14.json  2026-05-16.md  2026-05-17.json  2026-05-19.md
state/latest/feeds/: atlassian.json  google-cloud.json  google-goog.json  m365-worldwide.json
state/latest/raw/: atlassian-ip-ranges.json  aws-ip-ranges.json  github-meta.json  google-cloud.json  google-goog.json  (+3 more)
tests/: conftest.py  test_adapters.py  test_cli.py  test_diffing.py  test_emitters.py
tests/fixtures/: atlassian-ip-ranges.json  aws-ip-ranges.json  github-meta.json  google-cloud.json  google-goog.json  m365-changes-worldwide.json  m365-endpoints-worldwide.json  m365-version-worldwide.json
